[package]
name = "rss4mdbook"
version = "0.2.42"
edition = "2021"

authors = ["silence_zhpf <silence_zhpf@aliyun.com>"]
license-file = "LICENSE"
description = "a generator for mdBook as CLI tool, export RSS.xml into u want path..."
readme = "README.md"
repository = "https://github.com/hackers267/rss4mdbook"

keywords = ["cli", "RSS", "mdBook", "generator", "serialization"]
categories = ["command-line-utilities", "encoding", "text-processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
# tracing = "0.1"
clia-tracing-config = "0.2"
dotenv = "0.15.0"
chrono = "0.4.23"
walkdir = "2"
rss = "2.0.2"
toml = "0.7.2"
scraper = "0.20.0"
env_logger = "0.11.5"

[dependencies.clap]
version = "4.1.6"
features = ["derive"]
